Adjusted class names

--- a/resources/less/routes/about.less
+++ b/resources/less/routes/about.less
@@ -1,26 +1,8 @@
 /**
- * The following styles were written with the subsequent route in mind,
+ * The following styles were written with the subsequent view(s) in mind,
  * although are not necessarily limited to it.
  *
- * @route  /about/server
- */
-.about-server #middle-column { }
-
-
-/**
- * The following styles were written with the subsequent route in mind,
- * although are not necessarily limited to it.
- *
- * @route  /about/screenshots
- */
-.about-screenshots #middle-column { }
-
-
-/**
- * The following styles were written with the subsequent route in mind,
- * although are not necessarily limited to it.
- *
- * @route  /about/features
+ * @view  ./resources/views/about/features.blade.php
  */
 .about-features #middle-column {
     ul {
@@ -35,10 +17,10 @@
 
 
 /**
- * The following styles were written with the subsequent route in mind,
+ * The following styles were written with the subsequent view(s) in mind,
  * although are not necessarily limited to it.
  *
- * @route  /about/premium
+ * @view  ./resources/views/about/premium.blade.php
  */
 .about-premium #middle-column {
     ul {
