--- a/resources/less/routes/library.less
+++ b/resources/less/routes/library.less
@@ -1,8 +1,8 @@
 /**
- * The following styles were written with the subsequent route in mind,
+ * The following styles were written with the subsequent view(s) in mind,
  * although are not necessarily limited to it.
  *
- * @route  /library/creatures
+ * @view  ./resources/views/library/creatures/index.blade.php
  */
 .library-creatures #middle-column {
 	.inner-box {
