--- a/resources/less/routes/news.less
+++ b/resources/less/routes/news.less
@@ -1,8 +1,8 @@
 /**
- * The following styles were written with the subsequent route in mind,
+ * The following styles were written with the subsequent view(s) in mind,
  * although are not necessarily limited to it.
  *
- * @route  /
+ * @view  ./resources/views/news/latest.blade.php
  */
 .news-latest #middle-column {
     .ticker {
@@ -101,10 +101,10 @@
 }
 
 /**
- * The following styles were written with the subsequent route in mind,
+ * The following styles were written with the subsequent view(s) in mind,
  * although are not necessarily limited to it.
  *
- * @route  /
+ * @view  ./resources/views/news/archive.blade.php
  */
 .news-archive #middle-column {
     .table-striped > tbody > tr > th {
