--- a/resources/less/routes/support.less
+++ b/resources/less/routes/support.less
@@ -1,8 +1,8 @@
 /**
- * The following styles were written with the subsequent route in mind,
+ * The following styles were written with the subsequent view(s) in mind,
  * although are not necessarily limited to it.
  *
- * @route  /support/rules
+ * @view  ./resources/views/support/rules.blade.php
  */
 .support-rules #middle-column {
     .content.dark {
@@ -54,24 +54,13 @@
 
 
 /**
- * The following styles were written with the subsequent route in mind,
+ * The following styles were written with the subsequent view(s) in mind,
  * although are not necessarily limited to it.
  *
- * @route  /support/terms
+ * @view  ./resources/views/support/terms.blade.php
+ * @view  ./resources/views/support/privacy.blade.php
  */
-.support-terms #middle-column {
-    .content.dark {
-        padding: 7px 15px;
-    }
-}
-
-
-/**
- * The following styles were written with the subsequent route in mind,
- * although are not necessarily limited to it.
- *
- * @route  /support/privacy
- */
+.support-terms #middle-column,
 .support-privacy #middle-column {
     .content.dark {
         padding: 7px 15px;
