Minor javascript fix

--- a/resources/less/routes/account.less
+++ b/resources/less/routes/account.less
@@ -49,6 +49,11 @@
         margin: 0 auto;
         display: block;
     }
+
+    small.error,
+    img.valign-middle[data-v-show] {
+        display: none;
+    }
 }
 
 
