--- a/resources/less/tibia/table.less
+++ b/resources/less/tibia/table.less
@@ -118,6 +118,10 @@ table.table-striped {
             }
         }
 
+        & > th > small {
+            font-weight: normal;
+        }
+
         & > td, & > th {
             border: 1px solid @table-light-border !important;
             background-color: @table-light-bgcolor;
