--- a/resources/less/app.less
+++ b/resources/less/app.less
@@ -5,7 +5,8 @@
 
 @import 'routes/about';
 @import 'routes/account';
-@import 'routes/support';
+@import 'routes/highscore';
 @import 'routes/library';
 @import 'routes/news';
+@import 'routes/support';
 @import 'routes/worlds';
