Worlds, players grouped by initial letter

--- a/resources/less/tibia/table.less
+++ b/resources/less/tibia/table.less
@@ -135,6 +135,11 @@ table.table-striped {
             }
         }
     }
+
+    & > tbody:nth-child(even) > tr > td,
+    & > tbody:nth-child(even) > tr > th {
+        background-color: @table-light-bgcolor;
+    }
 }
 
 .table {
