--- a/resources/less/routes/worlds.less
+++ b/resources/less/routes/worlds.less
@@ -14,4 +14,15 @@
             top: 0;
         }
     }
+
+    .alphabet {
+        margin-top: 4px;
+        font-size: 8px;
+
+        .pull-right;
+
+        & > a {
+            color: #fff;
+        }
+    }
 }
