News, Articles & Tickers

--- a/resources/less/browsers/firefox.less
+++ b/resources/less/browsers/firefox.less
@@ -1,4 +1,8 @@
 @-moz-document url-prefix() {
+    .box > .header > .headline {
+        .line-height(2);
+    }
+
     .green-button,
     .blue-button,
     .red-button {
