--- a/resources/less/routes/news.less
+++ b/resources/less/routes/news.less
@@ -56,6 +56,9 @@
 
     .featured {
         & > .inner-box-border > .inner-box {
+            box-sizing: border-box;
+            width: 100%;
+
             .clearfix;
 
             table {
