--- a/resources/less/tibia/classes.less
+++ b/resources/less/tibia/classes.less
@@ -275,7 +275,7 @@
 
             &.community { background-image: url('@{image-path}/newsicon_community_big.gif'); }
             &.development { background-image: url('@{image-path}/newsicon_development_big.gif'); }
-            &.staff { background-image: url('@{image-path}/newsicon_cipsoft_big.gif'); margin-top: -1px; }
+            &.staff { background-image: url('@{image-path}/newsicon_staff_big.gif'); margin-top: -1px; }
             &.support { background-image: url('@{image-path}/newsicon_support_big.gif'); }
             &.technical { background-image: url('@{image-path}/newsicon_technical_big.gif'); }
         }
