--- a/resources/less/tibia/classes.less
+++ b/resources/less/tibia/classes.less
@@ -87,6 +87,7 @@ button.link {
     color: @link-color;
     font-weight: bold;
     cursor: pointer;
+    outline: none;
     border: none;
     padding: 0;
     margin: 0;
