Anchor button adjustment

--- a/resources/less/tibia/classes.less
+++ b/resources/less/tibia/classes.less
@@ -90,6 +90,7 @@ button.link {
     text-decoration: none;
     color: @link-color;
     font-weight: bold;
+    text-align: left;
     cursor: pointer;
     outline: none;
     border: none;
