Beginning of guilds

--- a/resources/less/tibia/layout/middle-column.less
+++ b/resources/less/tibia/layout/middle-column.less
@@ -105,6 +105,10 @@
                 margin: 5px 5px 15px;
 
                 .font-size(1.2);
+
+                &:last-child {
+                    margin: 5px;
+                }
             }
         }
     }
