--- a/resources/less/tibia/table.less
+++ b/resources/less/tibia/table.less
@@ -65,7 +65,7 @@ table.table-striped {
         }
 
         & > td, & > th {
-            border: 1px solid @table-medium-bgcolor !important;
+            border: 1px solid @table-light-border !important;
             background-color: @table-light-bgcolor;
 
             & > span:not(.hidden) {
