--- a/resources/less/tibia/classes.less
+++ b/resources/less/tibia/classes.less
@@ -43,6 +43,16 @@
     }
 }
 
+.breakwords {
+    -ms-word-break: break-all;
+    word-break: break-all;
+    word-break: break-word;
+    -webkit-hyphens: auto;
+    -moz-hyphens: auto;
+    -ms-hyphens: auto;
+    hyphens: auto;
+}
+
 .nowrap {
     white-space: nowrap;
 }
