Improvements to guilds

--- a/resources/less/app.less
+++ b/resources/less/app.less
@@ -5,6 +5,7 @@
 
 @import 'routes/about';
 @import 'routes/account';
+@import 'routes/guilds';
 @import 'routes/highscore';
 @import 'routes/library';
 @import 'routes/news';
