--- a/resources/less/browsers/firefox.less
+++ b/resources/less/browsers/firefox.less
@@ -17,4 +17,12 @@
             display: block;
         }
     }
+
+    .guilds-show #middle-column .informations-table > tbody > tr > td > .table {
+        // height: auto !important;
+
+        & > .content {
+            margin-top: -30px !important;
+        }
+    }
 }
