--- a/resources/less/tibia/elements.less
+++ b/resources/less/tibia/elements.less
@@ -1,6 +1,7 @@
 html {
     min-width: 1000px;
     font-size: 62.5%;
+    height: 100%;
 }
 
 body {
@@ -8,6 +9,7 @@ body {
     font-family: Verdana, Arial, 'Times New Roman', sans-serif;
     color: @heading-color;
     overflow-y: scroll;
+    height: 100%;
     margin: 0;
 
     .font-size(1.2);
