News performance improvements

--- a/resources/less/routes/news.less
+++ b/resources/less/routes/news.less
@@ -59,7 +59,7 @@
             box-sizing: border-box;
             width: 100%;
 
-            .clearfix;
+            .clearfix(inline-block);
 
             table {
                 border-spacing: 0;
