--- a/resources/less/tibia/classes.less
+++ b/resources/less/tibia/classes.less
@@ -298,7 +298,7 @@ button.link {
         height: 28px;
         width: 100%;
 
-        .clearfix;
+        .clearfix(inline-block);
 
         & > .icon {
             background: no-repeat center center;
