Individual spell pages

--- a/resources/less/tibia/classes.less
+++ b/resources/less/tibia/classes.less
@@ -22,6 +22,11 @@
     visibility: hidden;
 }
 
+.tibia-sprite {
+    height: 32px;
+    width: 32px;
+}
+
 .flag {
     vertical-align: middle;
     margin-top: -1px;
