--- a/resources/less/tibia/layout/layout.less
+++ b/resources/less/tibia/layout/layout.less
@@ -24,6 +24,25 @@
             margin: 0 210px;
 
             @import 'middle-column';
+
+            .footer {
+                text-align: center;
+                line-height: 12px;
+                font-size: 9.3px;
+                color: #fff;
+
+                a {
+                    border-bottom: 1px solid transparent;
+                    transition: border .15s ease-in-out;
+                    text-decoration: none;
+                    font-weight: bold;
+                    color: #fff;
+
+                    &:hover {
+                        border-bottom-color: #fff;
+                    }
+                }
+            }
         }
 
         &#right-column {
