--- a/resources/less/tibia/elements.less
+++ b/resources/less/tibia/elements.less
@@ -1,14 +1,14 @@
 html {
     min-width: 1000px;
+    min-height: 100%;
     font-size: 62.5%;
-    height: 100%;
 }
 
 body {
     background: url('@{image-path}/background-artwork.jpg') no-repeat top center #051122;
     font-family: Verdana, Arial, 'Times New Roman', sans-serif;
     color: @heading-color;
-    overflow-y: scroll;
+    // overflow-y: scroll;
     height: 100%;
     margin: 0;
 
